[Mod]テンプレートいろいろと調整

--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -4,7 +4,7 @@
 $accent: #F40000;
 $accent2: #f0f0f0;
 $outline: rgba(0, 0, 0, .2);
-$background: #fff;
+$background: #eee;
 $text: #4D4D4D;
-$title: #000;
+$title: #111;
 
