--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% import "macros.html" as macros %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
     <head>
       {% block head %}
         <meta http-equiv="X-UA-Compatible" content="IE=edge" >
