--- a/sass/_macros.scss
+++ b/sass/_macros.scss
@@ -39,6 +39,10 @@ figure.mini_logo + h5 {
     }
 }
 
+ul.social_signal {
+    padding: 0;
+}
+
 ul.social_list {
     display: inline-block;
     position: relative;
