--- a/sass/_shortcodes.scss
+++ b/sass/_shortcodes.scss
@@ -13,3 +13,14 @@
         height: 340px;
     }
 }
+
+.eyecatch {
+    text-align: center;
+    > img {
+        border-radius:50%;
+        object-fit: cover;
+        object-position: top center;
+        width:250px;
+        height:250px;
+    }
+}
