--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% import "macros.html" as macros %}
 
-
 {% block content %}
 <header class="header">
   {% block header %}
@@ -30,7 +29,7 @@
           {% else %}
             <p class="article_content">{{ page.content | striptags | truncate | safe }}</p>
           {% endif %}
-        <a class="button small" href="{{page.permalink}}">Continue Reading →</a>
+        <a class="button small" href="{{page.permalink}}">続きを読む →</a>
       </article>
     {% endfor %}
 </section>
