--- a/templates/macros.html
+++ b/templates/macros.html
@@ -107,3 +107,37 @@
     </div>
 </div>
 {% endmacro menu %}
+
+{% macro social_signal() %}
+<ul class="social_signal social_list">
+    <li>
+        <a href="//twitter.com/share" class="twitter-share-button" data-text="{{page.title}}" data-url="{{page.permalink}}" data-lang="ja" data-via="{{config.extra.twitter}}"></a>
+    </li>
+    <li>
+        <iframe src="https://www.facebook.com/plugins/share_button.php?href={{page.permalink}}&layout=button_count&size=small&appId=1522796374535783&width=80&height=20" width="80" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+    </li>
+    <li>
+        <a href="https://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="basic-label-counter" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/v4/public/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+    </li>
+</ul>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+{% endmacro social_signal %}
+
+{% macro toc() %}
+<ul>
+    {% for h1 in page.toc %}
+    <li>
+        <a href="{{h1.permalink | safe}}">{{ h1.title }}</a>
+        {% if h1.children %}
+        <ul>
+            {% for h2 in h1.children %}
+            <li>
+                <a href="{{h2.permalink | safe}}">{{ h2.title }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+    </li>
+    {% endfor %}
+</ul>
+{%endmacro toc %}
