--- a/templates/page.html
+++ b/templates/page.html
@@ -2,17 +2,29 @@
 {% import "macros.html" as macros %}
 
 {% block content %}
-<nav id="overlord" class="overlord" >
+<nav id="overlord" class="overlord">
   {{ macros::mini_logo(classes="", title=config.title, siteurl=config.base_url, logourl=config.extra.profile) }}
 </nav>
 
 <section class="post_container">
   <article>
     {% block post %}
-      <h1 class="article_title"><a href="{{page.permalink}}" id="article_link">{{ page.title }}</a></h1>
-      {{ macros::frontmatter(classes="frontmatter_page", date=page.date, word_count=page.word_count, read_time=page.reading_time) }}
-      {{ page.content | safe }}
-      {% endblock post %}
+
+    <h1 class="article_title"><a href="{{page.permalink}}" id="article_link">{{ page.title }}</a></h1>
+    {% if page.extra.img %}
+    <div class="eyecatch">
+      <img src="/img/content/{{ page.extra.img }}.jpg"/>
+    </div>
+    {% endif %}
+
+    {{ macros::social_signal() }}
+    {{ macros::frontmatter(classes="frontmatter_page", date=page.date, word_count=page.word_count,
+    read_time=page.reading_time) }}
+    {{ macros::toc() }}
+    {{ page.content | safe }}
+    {{ macros::social_signal() }}
+    {% endblock post %}
+
   </article>
 </section>
 {% endblock content %}
