--- a/templates/base.html
+++ b/templates/base.html
@@ -1,47 +1,122 @@
 {% import "macros.html" as macros %}
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-      {% block head %}
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-        <meta http-equiv="content-type" content="text/html; charset=utf-8">
+<head>
+  {% block head %}
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-        <!-- SEO -->
-        {% if page.title %}
-        <title> {{ page.title }} | {{ config.title }} </title>
-        {% else %}
-        <title> {{ config.title }} </title>
-        {% endif %}
+  <!-- SEO -->
+  {% if page.title %}
+  <title> {{ page.title }} | {{ config.title }} </title>
+  {% else %}
+  <title> {{ config.title }} </title>
+  {% endif %}
 
-        <!-- Enable responsiveness on mobile devices-->
-        <meta name="viewport"  content="width=device-width, initial-scale=1.0, maximum-scale=1" >
+  <!-- Enable responsiveness on mobile devices-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-        <!--  css -->
-        <link rel="stylesheet"  href="{{ config.base_url }}/ergo.css" >
+  <!--  css -->
+  <link rel="stylesheet" href="{{ config.base_url }}/ergo.css">
 
-        <!-- fonts -->
-        <!-- preload  -->
-        <link rel="preload" href="https://fonts.googleapis.com/css?family=Montserrat:200,300,300i,400,500,500i,600,700,800,900|Raleway" as="style">
-        <link rel="preload"  href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" as="style" >
-        <!-- load -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:200,300,300i,400,500,500i,600,700,800,900|Raleway">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"  integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-      {% endblock head %}
-    </head>
+  <!-- fonts -->
+  <!-- preload  -->
+  <link rel="preload"
+        href="https://fonts.googleapis.com/css?family=Montserrat:200,300,300i,400,500,500i,600,700,800,900|Raleway"
+        as="style">
+  <link rel="preload" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"
+        as="style">
+  <!-- load -->
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Montserrat:200,300,300i,400,500,500i,600,700,800,900|Raleway">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-    <body>
-      {% block menu %}
-        {{ macros::menu(title=config.title, siteurl=config.base_url, extra=config.extra, rss=config.generate_rss) }}
-      {% endblock menu %}
+  <!-- ogp -->
+  <meta property="og:type" content="article"/>
+  {% if page.title %}
+  <meta property="og:title" content="{{ page.title }} | {{ config.title }}"/>
+  {% else %}
+  <meta property="og:title" content="{{ config.title }}"/>
+  {% endif %}
 
-      {% block content %} {% endblock content %}
-      {% block pagination %} {% endblock pagination %}
+  {% if page.summary %}
+  <meta property="og:description"
+        content="{{ page.summary | safe }}"/>
+  {% else %}
+  <meta property="og:description"
+        content="{{ page.content | striptags | truncate | safe }}"/>
+  {% endif %}
 
-      <footer>
-        {% block footer %}
-          {{ macros::mini_logo(classes="", title=config.title, siteurl=config.base_url, logourl=config.extra.profile) }}
-          {{ macros::social_list(classes="foot_list", bsize="extra_small", extra=config.extra, siteurl=config.base_url, rss=config.generate_rss) }}
-        {% endblock footer %}
-      </footer>
-    </body>
+  {% if page.permalink %}
+  <meta property="og:url" content="{{ page.permalink }}"/>
+  {% else %}
+  <meta property="og:url" content="{{ config.base_url }}"/>
+  {% endif %}
+
+  <meta property="og:site_name" content="{{ config.title }}"/>
+
+  {% if page.extra.img %}
+  <meta property="og:image"
+        content="{{ config.base_url }}/img/content/{{ page.extra.img }}.jpg"/>
+  <meta property="og:image:secure_url"
+        content="{{ config.base_url }}/img/content/{{ page.extra.img }}.jpg"/>
+  {% else %}
+  <meta property="og:image"
+        content="{{ config.base_url }}/img/prof.jpg"/>
+  <meta property="og:image:secure_url"
+        content="{{ config.base_url }}/img/prof.jpg"/>
+  {% endif %}
+
+  {% if page.date %}
+  <meta property="article:published_time" content="{{ page.date }}"/>
+  <meta property="article:modified_time" content="{{ page.date }}"/>
+  {% endif %}
+
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:site" content="@24guchia"/>
+  <meta name="twitter:domain" content="24guchia"/>
+
+  {% if page.title %}
+  <meta name="twitter:title" content="{{ page.title}} | {{ config.title }}"/>
+  {% else %}
+  <meta name="twitter:title" content="{{ config.title }}"/>
+  {% endif %}
+
+  {% if page.summary %}
+  <meta name="twitter:description"
+        content="{{ page.summary | safe }}"/>
+  {% else %}
+  <meta name="twitter:description"
+        content="{{ page.content | striptags | truncate | safe }}"/>
+  {% endif %}
+
+  {% if page.extra.img %}
+  <meta name="twitter:image"
+        content="{{ config.base_url }}/img/content/{{ page.extra.img }}.jpg"/>
+  {% else %}
+  <meta name="twitter:image"
+        content="{{ config.base_url }}/img/prof.jpg"/>
+  {% endif %}
+
+  {% endblock head %}
+</head>
+
+<body>
+{% block menu %}
+{{ macros::menu(title=config.title, siteurl=config.base_url, extra=config.extra, rss=config.generate_rss) }}
+{% endblock menu %}
+
+{% block content %} {% endblock content %}
+{% block pagination %} {% endblock pagination %}
+
+<footer>
+  {% block footer %}
+  {{ macros::mini_logo(classes="", title=config.title, siteurl=config.base_url, logourl=config.extra.profile) }}
+  {{ macros::social_list(classes="foot_list", bsize="extra_small", extra=config.extra, siteurl=config.base_url,
+  rss=config.generate_rss) }}
+  {% endblock footer %}
+</footer>
+</body>
 </html>
