--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
   <meta property="article:modified_time" content="{{ page.date }}"/>
   {% endif %}
 
-  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:card" content="summary"/>
   <meta name="twitter:site" content="@24guchia"/>
   <meta name="twitter:domain" content="24guchia"/>
 
