Mod: 画像を程よい大きさに

--- a/sass/ergo.scss
+++ b/sass/ergo.scss
@@ -461,3 +461,7 @@ code {
     background: linear-gradient(transparent 60%, #c1e0ff 75%);
     font-weight: bold;
 }
+
+p > img {
+    width: 90%;
+}
