--- a/sass/_shortcodes.scss
+++ b/sass/_shortcodes.scss
@@ -14,6 +14,14 @@
     }
 }
 
+.index_eyecatch {
+    text-align: center;
+    img {
+        object-fit: cover;
+        object-position: top center;
+        height:250px;
+    }
+}
 .eyecatch {
     text-align: center;
     > img {
