--- a/templates/index.html
+++ b/templates/index.html
@@ -3,51 +3,54 @@
 
 {% block content %}
 <header class="header">
-  {% block header %}
-  <figure class="user_logo">
-      <a href="{{config.base_url}}" style="background-image: url({{config.base_url}}/img/{{config.extra.profile}}"></a>
-  </figure>
-  <h2 class="site_title">{{config.title}}</h2>
-  <div>{{config.description | markdown(inline=true) | safe }}</div>
-  {{ macros::social_list(classes="header_list", bsize="small", extra=config.extra, siteurl=config.base_url, rss=config.generate_rss) }}
-  {% endblock header %}
+    {% block header %}
+    <figure class="user_logo">
+        <a href="{{config.base_url}}"
+           style="background-image: url({{config.base_url}}/img/{{config.extra.profile}}"></a>
+    </figure>
+    <h2 class="site_title">{{config.title}}</h2>
+    <div>{{config.description | markdown(inline=true) | safe }}</div>
+    {{ macros::social_list(classes="header_list", bsize="small", extra=config.extra, siteurl=config.base_url,
+    rss=config.generate_rss) }}
+    {% endblock header %}
 </header>
 
 <section class="post_list">
     {% for page in paginator.pages %}
-      <article id="{{page.title}}" class="post_list_item">
-        <h1 class="article_title" >
-          <a href="{{page.permalink}}"  id="article_link" >{{page.title}}</a>
-        </h1>
+    <article id="{{page.title}}" class="post_list_item">
         {% if page.extra.img %}
-          <div class="eyecatch">
-            <img src="/img/content/{{ page.extra.img }}.jpg"/>
-          </div>
+        <div class="index_eyecatch">
+            <a href="{{page.permalink}}"><img src="/img/content/{{ page.extra.img }}.jpg"/></a>
+        </div>
+        {% else %}
+        <h1 class="article_title">
+            <a href="{{page.permalink}}">{{page.title}}</a>
+        </h1>
         {% endif %}
         {% if page.date %}
-            {{ macros::frontmatter(classes="", date=page.date, word_count=page.word_count, read_time=page.reading_time) }}
-          {% else %}
-            {{ macros::frontmatter(classes="", date="", word_count=page.word_count, read_time=page.reading_time) }}
-          {% endif %}
-          {% if page.summary %}
-            <p class="article_content">{{ page.summary | safe }}</p>
-          {% else %}
-            <p class="article_content">{{ page.content | striptags | truncate | safe }}</p>
-          {% endif %}
+        {{ macros::frontmatter(classes="", date=page.date, word_count=page.word_count, read_time=page.reading_time) }}
+        {% else %}
+        {{ macros::frontmatter(classes="", date="", word_count=page.word_count, read_time=page.reading_time) }}
+        {% endif %}
+        {% if page.summary %}
+        <p class="article_content">{{ page.summary | safe }}</p>
+        {% else %}
+        <p class="article_content">{{ page.content | striptags | truncate | safe }}</p>
+        {% endif %}
         <a class="button small" href="{{page.permalink}}">続きを読む →</a>
-      </article>
+    </article>
     {% endfor %}
 </section>
 {% endblock content %}
 
 {% block pagination %}
-  <nav class="pagination">
+<nav class="pagination">
     {% if paginator.previous %}
-      <span class="prev" ><a rel="prev" href="{{paginator.previous}}" class="button medium font_faint">← prev</a></span>
+    <span class="prev"><a rel="prev" href="{{paginator.previous}}" class="button medium font_faint">← prev</a></span>
     {% endif %}
 
     {% if paginator.next %}
-      <span class="next" ><a rel="next" href="{{paginator.next}}" class="button medium font_faint">next →</a></span>
+    <span class="next"><a rel="next" href="{{paginator.next}}" class="button medium font_faint">next →</a></span>
     {% endif %}
-  </nav>
+</nav>
 {% endblock pagination %}
